src/codegen/tests/snapshots/rusty__codegen__tests__codegen_error_messages_tests__invalid_initial_constant_values_in_pou_variables.snap
---
source: src/codegen/tests/codegen_error_messages_tests.rs
expression: err
---
error: Some initial values were not generated
  ┌─ <internal>:1:1
  │
1 │ 
  │ ^ Some initial values were not generated


